# polyCrypt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bm_data
documentation/: BinaryPolynomials.ipynb
documentation/Polynomials/: BasePolynomial.md  IrreduciblePolynomial.md  Polynomial.md
documentation/Testing and Benchmarking/: Benchmarking.md  Testing.md
include/: BasePolynomial.h  EllipticCurve.h  IrreducablePolynomial.h  IrreduciblePolynomial.h  Polynomial.h
lib/: CMakeLists.txt  CMakeLists.txt.in
report/: BinaryPolynomials.ipynb
src/: BasePolynomial.cc  EllipticCurve.cc  IrreduciblePolynomial.cc  Polynomial.cc  main.cc
src/CRC/: crc.cc
tests/: BasePolynomial-test.cc  CMakeLists.txt  IrreduciblePolynomial-test.cc  Polynomial-test.cc  benchmark.cc  test  test.cc
